--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/logo-1.png" />
+    <link rel="icon" type="image/png" href="/images/telescope.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/index.css" rel="stylesheet">
     <title>البتاني</title>
